--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Harmony Home</title>
     <!-- Стили -->
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="index.css" />
@@ -16,16 +16,24 @@
     <div class="page" id="page">
       <header class="page__header header">
         <div class="header__container">
+          <a class="header__logo logo" href="#"> Harmony Home </a>
           <nav class="header__nav nav">
-            <a class="nav__logo" href="#">Harmony Home</a>
             <a class="nav__link" href="#sofas">Sofas</a>
             <a class="nav__link" href="#tables">Tables</a>
             <a class="nav__link" href="#chairs">Chairs</a>
             <a class="nav__link" href="#accessories">Accessories</a>
           </nav>
+          <div class="header__toggler toggler">
+            <input type="checkbox" class="toggler__checkbox" id="themeCheckbox" />
+            <label class="toggler__label" for="themeCheckbox">
+              <span class="toggler__icon">☀</span>
+              <span class="toggler__icon">⏾</span>
+              <div class="toggler__button"></div>
+            </label>
+          </div>
         </div>
       </header>
-      <!-- Main product section -->
+      <!-- Main section -->
       <main class="page__main main">
         <div class="main__container">
           <div class="main__titleWrapper">
@@ -812,8 +820,8 @@
       </section>
       <!-- Dialog purchase form -->
       <dialog id="modal" class="dialog">
+        <h2 class="dialog__title">Purchase form</h2>
         <form method="dialog" class="dialog__form">
-          <h2 class="dialog__title">Purchase form</h2>
           <div class="dialog__dataWrapper">
             <span class="dialog__label">Product: </span>
             <span class="dialog__data" data-formData="productName"></span>
@@ -826,7 +834,6 @@
             <label class="dialog__label" for="count">Enter quantity: </label>
             <input class="dialog__input" type="number" name="count" id="count" />
           </div>
-
           <div class="dialog__inputWrapper">
             <span class="dialog__label">Choose a color: </span>
             <fieldset id="groupColor">
@@ -838,6 +845,10 @@
               <label for="gray">Gray</label><br />
             </fieldset>
           </div>
+          <div class="dialog__inputWrapper">
+            <span class="dialog__label">Enter comment: </span>
+            <textarea class="dialog__textarea textarea"></textarea>
+          </div>
           <div class="dialog__actionsWrapper">
             <button class="dialog__button button button-small" id="modalConfirm" type="submit">Confirm</button>
             <button class="dialog__button button button-small" id="modalCancel" type="reset">Close</button>
@@ -846,10 +857,10 @@
       </dialog>
       <footer class="footer">
         <div class="footer__container">
-          <nav class="footer__nav nav">
+          <nav class="footer__column footer__nav nav">
             <ul>
               <li>
-                <a class="nav__logo" href="#">Harmony Home</a>
+                <a class="nav__link logo" href="#">Harmony Home</a>
               </li>
               <li>
                 <a class="nav__link" href="#sofas">Sofas</a>
@@ -865,6 +876,33 @@
               </li>
             </ul>
           </nav>
+          <div class="footer__column footer__icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              id="body_1"
+              width="51"
+              height="38"
+            >
+              <g transform="matrix(0.07421875 0 0 0.07421875 6.5 -0)">
+                <g>
+                  <path
+                    d="M377.6 64L134.4 64C 95.52 64 64 95.52 64 134.4L64 134.4L64 166.4C 109.14 166.4 146.48001 199.78 152.69 243.2L152.69 243.2L359.3 243.2C 365.50998 199.78 402.86 166.4 447.99 166.4L447.99 166.4L447.99 134.4C 448 95.52 416.48 64 377.6 64zM384 256C 384 220.65 412.65 192 448 192C 483.35 192 512 220.65 512 256L512 256L512 326.4C 512 363.12 483.88 393.28 448 396.51L448 396.51L448 428.80002C 448 439.40002 439.4 448.00003 428.8 448.00003C 418.19998 448.00003 409.59998 439.40002 409.59998 428.80002L409.59998 428.80002L409.59998 396.80002L102.4 396.80002L102.4 428.80002C 102.4 439.40002 93.8 448.00003 83.2 448.00003C 72.59999 448.00003 64 439.4 64 428.8L64 428.8L64 396.50998C 28.119999 393.27997 0 363.12 0 326.39996L0 326.39996L0 256C 0 220.65 28.65 192 64 192C 99.35 192 128 220.65 128 256C 128 263.07 133.73 268.8 140.8 268.8L140.8 268.8L371.2 268.8C 378.27 268.8 384 263.07 384 256z"
+                    stroke="none"
+                    fill="#3f3b38"
+                    fill-rule="nonzero"
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="footer__column footer__contactWrapper">
+            <ul class="footer__contactList">
+              <li class="footer__contact">harmony@home.com</li>
+              <li class="footer__contact">+7 111 222-33-44</li>
+              <li class="footer__contact">958 Tailwater Lane Auburndale, FL 33823</li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
