--- a/index.html
+++ b/index.html
@@ -14,23 +14,34 @@
   </head>
   <body data-dark="false">
     <div class="page" id="page">
+      <!-- Header -->
       <header class="page__header header">
         <div class="header__container">
+   
           <a class="header__logo logo" href="#"> Harmony Home </a>
-          <nav class="header__nav nav">
-            <a class="nav__link" href="#sofas">Sofas</a>
-            <a class="nav__link" href="#tables">Tables</a>
-            <a class="nav__link" href="#chairs">Chairs</a>
-            <a class="nav__link" href="#accessories">Accessories</a>
-          </nav>
-          <div class="header__toggler toggler">
-            <input type="checkbox" class="toggler__checkbox" id="themeToggler" />
-            <label class="toggler__label" for="themeToggler">
-              <span class="toggler__icon">☀</span>
-              <span class="toggler__icon">⏾</span>
-              <div class="toggler__button"></div>
-            </label>
+
+          <input class="burger__toggle" id="burger__toggle" type="checkbox" />
+          <label class="burger__button" for="burger__toggle">
+            <span></span>
+          </label>  
+
+          <div class="header__wrapper">
+            <nav class="header__nav nav">
+              <a class="nav__link" href="#sofas">Sofas</a>
+              <a class="nav__link" href="#tables">Tables</a>
+              <a class="nav__link" href="#chairs">Chairs</a>
+              <a class="nav__link" href="#accessories">Accessories</a>
+            </nav>
+            <div class="header__toggler toggler">
+              <input type="checkbox" class="toggler__checkbox" id="themeToggler" />
+              <label class="toggler__label" for="themeToggler">
+                <span class="toggler__icon">☀</span>
+                <span class="toggler__icon">⏾</span>
+                <div class="toggler__button"></div>
+              </label>
+            </div>
           </div>
+          
         </div>
       </header>
       <!-- Main section -->
@@ -1021,53 +1032,35 @@
           </div>
         </form>
       </dialog>
+      <!-- Footer -->
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__wrapper">
             <nav class="footer__column footer__nav nav">
-              <ul>
-                <li>
+              <ul class="nav__list">
+                <li class="nav__listItem">
                   <a class="nav__link logo" href="#">Harmony Home</a>
                 </li>
-                <li>
+                <li class="nav__listItem" i>
                   <a class="nav__link" href="#sofas">Sofas</a>
                 </li>
-                <li>
+                <li class="nav__listItem">
                   <a class="nav__link" href="#tables">Tables</a>
                 </li>
-                <li>
+                <li class="nav__listItem">
                   <a class="nav__link" href="#chairs">Chairs</a>
                 </li>
-                <li>
+                <li class="nav__listItem">
                   <a class="nav__link" href="#accessories">Accessories</a>
                 </li>
               </ul>
             </nav>
-            <div class="footer__column footer__icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                id="body_1"
-                width="51"
-                height="38"
-              >
-                <g transform="matrix(0.07421875 0 0 0.07421875 6.5 -0)">
-                  <g>
-                    <path
-                      d="M377.6 64L134.4 64C 95.52 64 64 95.52 64 134.4L64 134.4L64 166.4C 109.14 166.4 146.48001 199.78 152.69 243.2L152.69 243.2L359.3 243.2C 365.50998 199.78 402.86 166.4 447.99 166.4L447.99 166.4L447.99 134.4C 448 95.52 416.48 64 377.6 64zM384 256C 384 220.65 412.65 192 448 192C 483.35 192 512 220.65 512 256L512 256L512 326.4C 512 363.12 483.88 393.28 448 396.51L448 396.51L448 428.80002C 448 439.40002 439.4 448.00003 428.8 448.00003C 418.19998 448.00003 409.59998 439.40002 409.59998 428.80002L409.59998 428.80002L409.59998 396.80002L102.4 396.80002L102.4 428.80002C 102.4 439.40002 93.8 448.00003 83.2 448.00003C 72.59999 448.00003 64 439.4 64 428.8L64 428.8L64 396.50998C 28.119999 393.27997 0 363.12 0 326.39996L0 326.39996L0 256C 0 220.65 28.65 192 64 192C 99.35 192 128 220.65 128 256C 128 263.07 133.73 268.8 140.8 268.8L140.8 268.8L371.2 268.8C 378.27 268.8 384 263.07 384 256z"
-                      stroke="none"
-                      fill="#3f3b38"
-                      fill-rule="nonzero"
-                    />
-                  </g>
-                </g>
-              </svg>
-            </div>
             <div class="footer__column footer__contactWrapper">
               <ul class="footer__contactList">
                 <li class="footer__contact">harmony@home.com</li>
                 <li class="footer__contact">+7 111 222-33-44</li>
-                <li class="footer__contact">958 Tailwater Lane Auburndale</li>
+                <li class="footer__contact">Tailwater Lane Auburndale</li>
+                <li class="footer__contact">958223</li>
               </ul>
             </div>
           </div>
