--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harmony Home</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
     <!-- Стили -->
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="index.css" />
-    <!-- Скрипт -->
+    <!-- Скрипты -->
     <script src="./src/scripts/index.js" type="module"></script>
     <script defer src="./index.js" type="module"></script>
   </head>
@@ -17,13 +18,11 @@
       <!-- Header -->
       <header class="page__header header">
         <div class="header__container">
-          <a class="header__logo logo" href="#"> Harmony Home </a>
-
+          <a class="header__logo logo" href="#">Harmony Home</a>
           <input class="burger__toggle" id="burger__toggle" type="checkbox" />
           <label class="burger__button" for="burger__toggle">
             <span></span>
           </label>
-
           <div class="header__wrapper">
             <nav class="header__nav nav">
               <a class="nav__link" href="#sofas">Sofas</a>
